defconfig: add ares_defconfig

--- a/arch/arm64/configs/ares_user_defconfig
+++ b/arch/arm64/configs/ares_user_defconfig
@@ -6,16 +6,6 @@ CONFIG_ARM64=y
 CONFIG_64BIT=y
 CONFIG_ARCH_PHYS_ADDR_T_64BIT=y
 CONFIG_MMU=y
-CONFIG_EROFS_FS_DEBUG=y
-CONFIG_EROFS_FS=y
-CONFIG_MISC_FILESYSTEMS=y
-CONFIG_EROFS_FS_PCPU_KTHREAD=y
-CONFIG_EROFS_FS_ZIP=y
-CONFIG_EROFS_FS_PCPU_KTHREAD_HIPRI=y
-CONFIG_EROFS_FS_POSIX_ACL=y
-CONFIG_EROFS_FS_XATTR=y
-CONFIG_EROFS_FS_SECURITY=y
-
 CONFIG_ARM64_PAGE_SHIFT=12
 CONFIG_ARM64_CONT_SHIFT=4
 CONFIG_ARCH_MMAP_RND_BITS_MIN=18
@@ -58,8 +48,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="aarch64-linux-android-"
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION=""
-CONFIG_MIHW=y
+CONFIG_LOCALVERSION="AbzRaider-S-OSS-v1.0"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -332,9 +321,9 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
-# CONFIG_MODULE_FORCE_LOAD is not set
+CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
-# CONFIG_MODULE_FORCE_UNLOAD is not set
+CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_MODULE_SIG is not set
@@ -465,7 +454,6 @@ CONFIG_ARM64_ERRATUM_845719=y
 # CONFIG_ARM64_ERRATUM_843419 is not set
 CONFIG_ARM64_ERRATUM_1024718=y
 CONFIG_ARM64_ERRATUM_1542418=y
-CONFIG_ARM64_ERRATUM_1188873=y
 CONFIG_CAVIUM_ERRATUM_22375=y
 CONFIG_CAVIUM_ERRATUM_23154=y
 CONFIG_CAVIUM_ERRATUM_27456=y
@@ -558,7 +546,6 @@ CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_UNMAP_KERNEL_AT_EL0=y
 CONFIG_HARDEN_BRANCH_PREDICTOR=y
 CONFIG_ARM64_SSBD=y
-CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY=y
 CONFIG_ARM64_TAGGED_ADDR_ABI=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
@@ -669,6 +656,7 @@ CONFIG_ARM_MTK_NEW_ARCH_CPUIDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_ATTR_SET=y
 CONFIG_CPU_FREQ_GOV_COMMON=y
+CONFIG_CPU_FREQ_MTK=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_TIMES=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
@@ -1257,7 +1245,6 @@ CONFIG_GENERIC_ARCH_TOPOLOGY=y
 # CONFIG_BRCMSTB_GISB_ARB is not set
 # CONFIG_SIMPLE_PM_BUS is not set
 # CONFIG_VEXPRESS_CONFIG is not set
-CONFIG_MILLET=y
 # CONFIG_CONNECTOR is not set
 # CONFIG_GNSS is not set
 # CONFIG_MTD is not set
@@ -1276,8 +1263,8 @@ CONFIG_OF_RESERVED_MEM=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 CONFIG_ZRAM=y
-CONFIG_ZRAM_WRITEBACK=y
-CONFIG_MIUI_ZRAM_MEMORY_TRACKING=y
+# CONFIG_ZRAM_WRITEBACK is not set
+# CONFIG_MIUI_ZRAM_MEMORY_TRACKING is not set
 # CONFIG_BLK_DEV_COW_COMMON is not set
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
@@ -1486,7 +1473,7 @@ CONFIG_MTK_LPM_GS_DUMP_VERSION="v1"
 # CONFIG_MTK_LPM_MT6877 is not set
 CONFIG_MTK_LPM_MT6885=y
 # CONFIG_MTK_LPM_MT6781 is not set
-CONFIG_XM_LPM_STATE_RECORDS=y
+# CONFIG_XM_LPM_STATE_RECORDS is not set
 
 #
 # MultiMedia, Display, Camera
@@ -1494,8 +1481,8 @@ CONFIG_XM_LPM_STATE_RECORDS=y
 CONFIG_CUSTOM_KERNEL_IMGSENSOR="ov64b40sunny_mipi_raw ov16a1qofilm_mipi_raw gc02m1sunny_mipi_raw imx355sunny_mipi_raw"
 CONFIG_CUSTOM_KERNEL_CAM_CAL_DRV="BRCB032GWZ_3 GT24c32a cat24c16"
 CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
-CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
-CONFIG_MTK_DRM_KEY_MNG_SUPPORT=y
+# CONFIG_MTK_SVP_ON_MTEE_SUPPORT is not set
+# CONFIG_MTK_DRM_KEY_MNG_SUPPORT is not set
 # CONFIG_MTK_MT6382_BDG is not set
 CONFIG_MTK_CAMERA_ISP=y
 CONFIG_MTK_CAMERA_ISP_RSC_SUPPORT=y
@@ -1702,7 +1689,7 @@ CONFIG_NFC_ST54_SPI=y
 #
 # Security
 #
-CONFIG_MTK_TEE_GP_SUPPORT=y
+# CONFIG_MTK_TEE_GP_SUPPORT is not set
 # CONFIG_TRUSTONIC_TEE_SUPPORT is not set
 CONFIG_MICROTRUST_TEE_SUPPORT=y
 CONFIG_MICROTRUST_TEE_VERSION="400"
@@ -1720,8 +1707,6 @@ CONFIG_MICROTRUST_TZ_LOG=y
 # CONFIG_MICROTRUST_TZDRIVER_DYNAMICAL_DEBUG is not set
 # CONFIG_TRUSTKERNEL_TEE_SUPPORT is not set
 CONFIG_MTK_PROT_MEM_SUPPORT=y
-CONFIG_MTK_SECURE_MEM_SUPPORT=y
-CONFIG_MTK_WFD_SMEM_SUPPORT=y
 # CONFIG_MTK_HAPP_MEM_SUPPORT is not set
 # CONFIG_MTK_SDSP_MEM_SUPPORT is not set
 # CONFIG_MTK_SDSP_SHARED_MEM_SUPPORT is not set
@@ -2051,7 +2036,6 @@ CONFIG_MTK_TINYSYS_MCUPM_SUPPORT=y
 # CONFIG_MTK_UNIFIED_DEBUG_INTERFACE is not set
 # CONFIG_MTK_OTP is not set
 # CONFIG_MTK_SDA is not set
-CONFIG_MI_MEMORY_SYSFS=y
 
 #
 # SCSI device support
@@ -2103,7 +2087,6 @@ CONFIG_UFSTW_IGNORE_GUARANTEE_BIT=y
 CONFIG_UFSTW_BOOT_ENABLED=y
 CONFIG_SCSI_SKHPB=y
 CONFIG_SCSI_UFS_CRYPTO=y
-# CONFIG_CLD is not set
 # CONFIG_SCSI_DEBUG is not set
 # CONFIG_SCSI_VIRTIO is not set
 # CONFIG_SCSI_LOWLEVEL_PCMCIA is not set
@@ -2866,7 +2849,6 @@ CONFIG_BQ2597X_CHARGE_PUMP=y
 # TI Technologies, Inc. Charger support
 #
 # CONFIG_CHARGER_LN8000 is not set
-CONFIG_XM_POWER_DEBUG=y
 # CONFIG_HWMON is not set
 CONFIG_THERMAL=y
 CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=0
@@ -4324,7 +4306,6 @@ CONFIG_MTK_ION=y
 # CONFIG_LTE_GDM724X is not set
 # CONFIG_LNET is not set
 # CONFIG_GS_FPGABOOT is not set
-CONFIG_RTMM=y
 # CONFIG_COMMON_CLK_XLNX_CLKWZRD is not set
 # CONFIG_FB_TFT is not set
 # CONFIG_WILC1000_SDIO is not set
@@ -5190,8 +5171,8 @@ CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 # CONFIG_SOFTLOCKUP_DETECTOR is not set
 # CONFIG_DETECT_HUNG_TASK is not set
 # CONFIG_WQ_WATCHDOG is not set
-# CONFIG_PANIC_ON_OOPS is not set
-CONFIG_PANIC_ON_OOPS_VALUE=0
+CONFIG_PANIC_ON_OOPS=y
+CONFIG_PANIC_ON_OOPS_VALUE=1
 CONFIG_PANIC_TIMEOUT=1
 CONFIG_SCHED_DEBUG=y
 CONFIG_SCHED_INFO=y
