--- a/arch/arm64/configs/k6889v1_64_defconfig
+++ b/arch/arm64/configs/k6889v1_64_defconfig
@@ -194,7 +194,6 @@ CONFIG_MTK_AURISYS_PHONE_CALL_SUPPORT=y
 CONFIG_MTK_AUDIODSP_SUPPORT=y
 CONFIG_MTK_RAM_CONSOLE=y
 CONFIG_MTK_AEE_FEATURE=y
-CONFIG_MTK_AEE_UT=y
 CONFIG_MTK_SIB_USB_SWITCH=y
 CONFIG_USB_MU3D_DRV_36BIT=y
 CONFIG_MTK_RTC=y
@@ -313,10 +312,10 @@ CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_LOGO=y
 CONFIG_SND_HRTIMER=y
 CONFIG_SND_DYNAMIC_MINORS=y
-# CONFIG_SND_VERBOSE_PRINTK is not set
-# CONFIG_SND_DEBUG is not set
-# CONFIG_SND_DEBUG_VERBOSE is not set
-# CONFIG_SND_PCM_XRUN_DEBUG is not set
+CONFIG_SND_VERBOSE_PRINTK=y
+CONFIG_SND_DEBUG=y
+CONFIG_SND_DEBUG_VERBOSE=y
+CONFIG_SND_PCM_XRUN_DEBUG=y
 CONFIG_SND_SEQUENCER=y
 CONFIG_SND_SEQ_DUMMY=y
 # CONFIG_SND_SPI is not set
